add Заказы в работе

--- a/bizopt/BO/templates/becomeCreatorTemplates/template1.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template1.html
@@ -20,158 +20,16 @@
                     </tr>
                 </thead>
                 <tbody>
+                    {% for product in products %}
                     <tr>
-                        <td class="col-xs-3">123441</td>
-                        <td class="col-xs-3">Сделеать стул</td>
-                        <td class="col-xs-6">2</td>
-                        <td class="col-xs-3">@idЗаказчика</td>
+                        <td class="col-xs-3">{{ product.id }}</td>
+                        <td class="col-xs-3">{{ product.product_name }}</td>
+                        <td class="col-xs-6">1</td>
+                        <td class="col-xs-3">{{ product.customer }}</td>
                         <td class="col-xs-3">2021-05-23</td>
-                        <td class="col-xs-6">В работе</td>
+                        <td class="col-xs-6">{{ product.status2 }}</td>
                     </tr>
-                    <tr>
-                        <td class="col-xs-3">123441</td>
-                        <td class="col-xs-3">Сделеать стул</td>
-                        <td class="col-xs-6">2</td>
-                        <td class="col-xs-3">@idЗаказчика</td>
-                        <td class="col-xs-3">2021-05-23</td>
-                        <td class="col-xs-6">В работе</td>
-                    </tr>
-                    <tr>
-                        <td class="col-xs-3">123441</td>
-                        <td class="col-xs-3">Сделеать стул</td>
-                        <td class="col-xs-6">2</td>
-                        <td class="col-xs-3">@idЗаказчика</td>
-                        <td class="col-xs-3">2021-05-23</td>
-                        <td class="col-xs-6">В работе</td>
-                    </tr>
-                    <tr>
-                        <td class="col-xs-3">123441</td>
-                        <td class="col-xs-3">Сделеать стул</td>
-                        <td class="col-xs-6">2</td>
-                        <td class="col-xs-3">@idЗаказчика</td>
-                        <td class="col-xs-3">2021-05-23</td>
-                        <td class="col-xs-6">В работе</td>
-                    </tr>
-                    <tr>
-                        <td class="col-xs-3">123441</td>
-                        <td class="col-xs-3">Сделеать стул</td>
-                        <td class="col-xs-6">2</td>
-                        <td class="col-xs-3">@idЗаказчика</td>
-                        <td class="col-xs-3">2021-05-23</td>
-                        <td class="col-xs-6">В работе</td>
-                    </tr>
-                    <tr>
-                        <td class="col-xs-3">123441</td>
-                        <td class="col-xs-3">Сделеать стул</td>
-                        <td class="col-xs-6">2</td>
-                        <td class="col-xs-3">@idЗаказчика</td>
-                        <td class="col-xs-3">2021-05-23</td>
-                        <td class="col-xs-6">В работе</td>
-                    </tr>
-                    <tr>
-                        <td class="col-xs-3">123441</td>
-                        <td class="col-xs-3">Сделеать стул</td>
-                        <td class="col-xs-6">2</td>
-                        <td class="col-xs-3">@idЗаказчика</td>
-                        <td class="col-xs-3">2021-05-23</td>
-                        <td class="col-xs-6">В работе</td>
-                    </tr>
-                    <tr>
-                        <td class="col-xs-3">123441</td>
-                        <td class="col-xs-3">Сделеать стул</td>
-                        <td class="col-xs-6">2</td>
-                        <td class="col-xs-3">@idЗаказчика</td>
-                        <td class="col-xs-3">2021-05-23</td>
-                        <td class="col-xs-6">В работе</td>
-                    </tr>
-                    <tr>
-                        <td class="col-xs-3">123441</td>
-                        <td class="col-xs-3">Сделеать стул</td>
-                        <td class="col-xs-6">2</td>
-                        <td class="col-xs-3">@idЗаказчика</td>
-                        <td class="col-xs-3">2021-05-23</td>
-                        <td class="col-xs-6">В работе</td>
-                    </tr>
-                    <tr>
-                        <td class="col-xs-3">123441</td>
-                        <td class="col-xs-3">Сделеать стул</td>
-                        <td class="col-xs-6">2</td>
-                        <td class="col-xs-3">@idЗаказчика</td>
-                        <td class="col-xs-3">2021-05-23</td>
-                        <td class="col-xs-6">В работе</td>
-                    </tr>
-                    <tr>
-                        <td class="col-xs-3">123441</td>
-                        <td class="col-xs-3">Сделеать стул</td>
-                        <td class="col-xs-6">2</td>
-                        <td class="col-xs-3">@idЗаказчика</td>
-                        <td class="col-xs-3">2021-05-23</td>
-                        <td class="col-xs-6">В работе</td>
-                    </tr>
-                    <tr>
-                        <td class="col-xs-3">123441</td>
-                        <td class="col-xs-3">Сделеать стул</td>
-                        <td class="col-xs-6">2</td>
-                        <td class="col-xs-3">@idЗаказчика</td>
-                        <td class="col-xs-3">2021-05-23</td>
-                        <td class="col-xs-6">В работе</td>
-                    </tr>
-                    <tr>
-                        <td class="col-xs-3">123441</td>
-                        <td class="col-xs-3">Сделеать стул</td>
-                        <td class="col-xs-6">2</td>
-                        <td class="col-xs-3">@idЗаказчика</td>
-                        <td class="col-xs-3">2021-05-23</td>
-                        <td class="col-xs-6">В работе</td>
-                    </tr>
-                    <tr>
-                        <td class="col-xs-3">123441</td>
-                        <td class="col-xs-3">Сделеать стул</td>
-                        <td class="col-xs-6">2</td>
-                        <td class="col-xs-3">@idЗаказчика</td>
-                        <td class="col-xs-3">2021-05-23</td>
-                        <td class="col-xs-6">В работе</td>
-                    </tr>
-                    <tr>
-                        <td class="col-xs-3">123441</td>
-                        <td class="col-xs-3">Сделеать стул</td>
-                        <td class="col-xs-6">2</td>
-                        <td class="col-xs-3">@idЗаказчика</td>
-                        <td class="col-xs-3">2021-05-23</td>
-                        <td class="col-xs-6">В работе</td>
-                    </tr>
-                    <tr>
-                        <td class="col-xs-3">123441</td>
-                        <td class="col-xs-3">Сделеать стул</td>
-                        <td class="col-xs-6">2</td>
-                        <td class="col-xs-3">@idЗаказчика</td>
-                        <td class="col-xs-3">2021-05-23</td>
-                        <td class="col-xs-6">В работе</td>
-                    </tr>
-                    <tr>
-                        <td class="col-xs-3">123441</td>
-                        <td class="col-xs-3">Сделеать стул</td>
-                        <td class="col-xs-6">2</td>
-                        <td class="col-xs-3">@idЗаказчика</td>
-                        <td class="col-xs-3">2021-05-23</td>
-                        <td class="col-xs-6">В работе</td>
-                    </tr>
-                    <tr>
-                        <td class="col-xs-3">123441</td>
-                        <td class="col-xs-3">Сделеать стул</td>
-                        <td class="col-xs-6">2</td>
-                        <td class="col-xs-3">@idЗаказчика</td>
-                        <td class="col-xs-3">2021-05-23</td>
-                        <td class="col-xs-6">В работе</td>
-                    </tr>
-                    <tr>
-                        <td class="col-xs-3">123441</td>
-                        <td class="col-xs-3">Сделеать стул</td>
-                        <td class="col-xs-6">2</td>
-                        <td class="col-xs-3">@idЗаказчика</td>
-                        <td class="col-xs-3">2021-05-23</td>
-                        <td class="col-xs-6">В работе</td>
-                    </tr>
+                    {% endfor %}
                 </tbody>
             </table>
         </div>
