--- a/bizopt/BO/templates/becomeCreatorTemplates/template3.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template3.html
@@ -17,16 +17,13 @@
         <!--Table-->
         <table class="table table-hover table-responsive mb-0">
             <!--Table head-->
-            <thead>
+               <thead>
                 <tr>
                     <th scope="row">#</th>
-                    <th class="th-lg"><a>First Name</a></th>
-                    <th class="th-lg"><a href="">Last Name</a></th>
-                    <th class="th-lg"><a href="">Username</a></th>
-                    <th class="th-lg"><a href="">Username</a></th>
                     <th class="th-lg"><a href="">Название товара</a></th>
+                    <th class="th-lg"><a href="">Бренд</a></th>
                     <th class="th-lg"><a href="">Цена</a></th>
-                    <th class="th-lg"><a href="">Удалить</a></th>
+                    <th class="th-lg"><a href="">Опубликован</a></th>
                 </tr>
             </thead>
 
@@ -34,17 +31,15 @@
             <!--Table body-->
             <tbody>
             {% for product in products %}
+
                 <tr>
                     <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td>Mark</td>
                     <td>{{ product.product_name }}</td>
+                    <td>text</td>
                     <td>{{ product.cost }}</td>
-                    <td><button type="button" class="btn btn-outline-secondary">x</button></td>
-                </tr>
+                    <td>text</td>
 
+                </tr>
             {% endfor %}
             </tbody>
             <!--Table body-->
