--- a/bizopt/BO/templates/becomeCreatorTemplates/template1.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template1.html
@@ -32,6 +32,7 @@
                     {% endfor %}
                 </tbody>
             </table>
+            <button type="button" class="btn btn-secondary button">Сохранить</button>
         </div>
     </div>
 
