fix front (Evg)

--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -178,7 +178,7 @@
 
 
                 <li class="Btn">
-                    <a href="">Главная</a>
+                    <a href="#">Главная</a>
                 </li>
 
 
@@ -186,13 +186,13 @@
                     <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Мой профиль</a>
                     <ul class="collapse list-unstyled" id="homeSubmenu">
                         <li class="ExtBtn">
-                            <a href="">Данные продавца</a>
+                            <a href="#">Данные продавца</a>
                         </li>
                         <li class="ExtBtn">
-                            <a href="">Пользователи</a>
+                            <a href="#">Пользователи</a>
                         </li>
                         <li class="ExtBtn">
-                            <a href="">Мои данные</a>
+                            <a href="#">Мои данные</a>
                         </li>
                     </ul>
                 </li>
@@ -203,7 +203,7 @@
                 </li>
 
                 <li class="Btn">
-                    <a href="">Резюме</a>
+                    <a href="#">Резюме</a>
                 </li>
 
             </ul>
