add output tables

--- a/bizopt/BO/templates/becomeCreatorTemplates/template1.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template1.html
@@ -27,7 +27,15 @@
                         <td class="col-xs-6">1</td>
                         <td class="col-xs-3">{{ product.customer }}</td>
                         <td class="col-xs-3">2021-05-23</td>
-                        <td class="col-xs-6">{{ product.status2 }}</td>
+                        <th class="col-xs-6">
+                            <select class="form-select" aria-label="Default select example">
+                                <option selected>{{ product.status2 }}</option>
+                                <option value="1">В работе</option>
+                                <option value="3">Сделано</option>
+                            </select>
+                        </th>
+
+
                     </tr>
                     {% endfor %}
                 </tbody>
@@ -82,10 +90,9 @@
                         <thead>
                             <tr>
                                 <th class="col-xs-3">ID Запроса</th>
-                                <th class="col-xs-3">ID Товара</th>
+                                <th class="col-xs-3">Название Товара</th>
                                 <th class="col-xs-3">Заказчик</th>
                                 <th class="col-xs-3">Статус</th>
-
                             </tr>
                         </thead>
                         <tbody>
@@ -93,10 +100,8 @@
                     <tr>
                         <td class="col-xs-3">{{ product.id }}</td>
                         <td class="col-xs-3">{{ product.product_name }}</td>
-                        <td class="col-xs-6">1</td>
-                        <td class="col-xs-3">{{ product.customer }}</td>
-                        <td class="col-xs-3">2021-05-23</td>
-                        <td class="col-xs-6">{{ product.status2 }}</td>
+                        <td class="col-xs-3">{{ product.id_user_buy }}</td>
+                        <td class="col-xs-3"><button type="button" class="btn btn-secondary btn-sm">Согласиться</button></td>
                     </tr>
                     {% endfor %}
 
