changed ligin && regitration poles

--- a/bizopt/BO/templates/becomeCreatorTemplates/template11.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template11.html
@@ -8,11 +8,21 @@
                 <label class="labels">ИНН</label>
                 <input type="text" class="form-control" name="" id="">
                 <br>
+                <label class="labels">Краткое наиименование</label>
+                <input type="text" class="form-control" name="" id="">
+                <br>
                 <label class="labels">Полное наиименование</label>
                 <input type="text" class="form-control" name="" id="">
                 <br>
                 <label class="labels">Форма регистрации</label>
-                <input type="text" class="form-control" name="" id="">
+                <div class="input-group mb-3">
+                    <select class="form-select" id="inputGroupSelect02">
+                      <option value="1">ИП без НДС</option>
+                      <option value="2">ИП с НДС</option>
+                      <option value="3">ИП на НПД</option>
+                      <option value="4">Самозанятый</option>
+                    </select>
+                  </div>
                 <br>
                 <label class="labels">Расчетный счет</label>
                 <input type="text" class="form-control" name="" id="">
