--- a/bizopt/BO/templates/registration/login.html
+++ b/bizopt/BO/templates/registration/login.html
@@ -135,8 +135,8 @@
 					<div class="tab">
 						<p>
 							<br>
-							{{ form.email.label_tag }}
-							{{ form.email }}
+							{{ form.username.label_tag }}
+							{{ form.username }}
 							<br>
 							<br>
 							{{ form.password.label_tag }}
