--- a/bizopt/BO/templates/becomeCreatorTemplates/template4.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template4.html
@@ -2,11 +2,9 @@
   <div class="d-flex justify-content-center align-items-center mb-3 mt-5">
     <h4 class="text-right">Резюме</h4>
   </div>
-  <div class="col-md-3 border-right">
+  <div class="col-md-3 border-end">
     <div class="d-flex flex-column align-items-center text-center py-5">
-      <img class="rounded-circle mt-5" width="150px"
-{#        src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg"#}
-        src="{{ creator_avatar.url }}">
+      <img class="rounded-circle mt-5" width="150px" src="{{ creator_avatar.url }}">
       <span class="font-weight-bold">{{ first_name }}
       </span>
       <span class="text-black-50">{{ email }}</span>
@@ -18,17 +16,19 @@
     <form method="post" enctype="multipart/form-data">
       {% csrf_token %}
       <div class="p-3 py-5">
-        <div class="row mt-3">
-          <div class="col-md-9">
-            <h1 class="labels">Изображения</h1>
-            <img class="rounded mt-5 border-right mr-2 ml-2 p-3" width="150px"
-              src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
-            <img class="rounded mt-5 border-right mr-2 ml-2 p-3" width="150px"
-              src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
-            <img class="rounded mt-5 border-right mr-2 ml-2 p-3" width="150px"
-              src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
+        <div class="row mt-3 d-flex align-items-center">
+          <div class="col-md-4">
+            <div class="form-check form-switch">
+              <input class="form-check-input" type="checkbox" name="iscompany" onchange="isCompany()"
+                id="isCompanyTrigger">
+              <label class="form-check-label" for="isCompanyTrigger">Вы являетесь компанией?</label>
+            </div>
+          </div>
+          <div class="col-md-8" id="companyTriggerOn" style="opacity: 0;">
+            <input type="text" id="companyInput" name="profile_company_name" class="form-control" placeholder="Название компании" disables>
           </div>
         </div>
+
         <br>
 
         <div class="row mt-3 mb-3">
@@ -38,28 +38,53 @@
           </div>
         </div>
 
-        <div class="row mt-3">
-          <div class="input-group mb-7">
-            {{ form1.select }}
-          </div>
-        </div>
-
-        <div class="row mt-3 d-flex align-items-center">
+        <div class="row mt-3 mb-3">
+          <h1 class="labels mb-4">Контакты</h1>
           <div class="col-md-6">
-            <div class="form-check form-switch">
-              <input class="form-check-input" type="checkbox" name="iscompany" onchange="isCompany()" id="isCompanyTrigger">
-              <label class="form-check-label" for="isCompanyTrigger">Вы являетесь компанией?</label>
+            <div class="input-group mb-3">
+              <input type="text" class="form-control" placeholder="@tag">
+              <snap class="input-group-text" style="color: white; background-color: #229ED9;">
+                <i class="fab fa-telegram"></i>
+              </snap>
+            </div>
+            <div class="input-group mb-3">
+              <input type="text" class="form-control" placeholder="https://vk.com/yourid">
+              <snap class="input-group-text" style="color: white; background-color: #4c75a3;">
+                <i class="fab fa-vk"></i>
+              </snap>
             </div>
           </div>
-          <div class="col-md-6" id="companyTriggerOn" style="display: none;">
-            <input type="text" name="profile_company_name" class="form-control" placeholder="Название компании" value="">
+          <div class="col-md-6">
+            <div class="input-group mb-3">
+              <input type="text" class="form-control" placeholder=" https://instagram.com/tag">
+              <snap class="input-group-text" style="color: white; background-color: #ac2bac;">
+                <i class="fab fa-instagram"></i>
+              </snap>
+            </div>
+            <div class="input-group mb-3">
+              <input type="text" class="form-control" placeholder="+71234567890">
+              <snap class="input-group-text" style="color: white; background-color: #25d366;">
+                <i class="fab fa-whatsapp"></i>
+              </snap>
+            </div>
           </div>
         </div>
 
         <div class="row mt-3 mb-3">
           <div class="col-md-8">
             <label class="labels">Загрузить фото</label>
-            <input id="fileupload" class="form-control" name="profile_images" type="file"/>
+            <input id="fileupload" class="form-control" name="profile_images" type="file" />
+          </div>
+        </div>
+
+        <br>
+
+        <div class="row mt-3 mb-3">
+          <div class="col-md-12">
+            <div class="form-check form-switch">
+              <input class="form-check-input" type="checkbox" value="1">
+              <label class="form-check-label">Хотите опубликовать резюме?</label>
+            </div>
           </div>
         </div>
 
@@ -67,19 +92,24 @@
           <button name="profile_saver" class="btn btn-primary profile-button" type="submit">Сохранить</button>
         </div>
         <div class="mt-2 mb-2">
-            <label class="labels" style="color: crimson">{{ error }}</label>
+          <label class="labels" style="color: crimson">{{ error }}</label>
         </div>
       </div>
-    </form>
   </div>
+  </form>
+</div>
 
 </div>
 <script>
-  function isCompany(){
-    if (document.getElementById('isCompanyTrigger').checked){
-      document.getElementById('companyTriggerOn').style.display = "flex";
-    } else{
-      document.getElementById('companyTriggerOn').style.display = "none";
+  function isCompany() {
+    let companyDiv = document.getElementById('companyTriggerOn');
+    let companyInput = document.getElementById('companyInput');
+    if (document.getElementById('isCompanyTrigger').checked) {
+      companyDiv.style.opacity = 1;
+      companyInput.removeAttribute("disabled");
+    } else {
+      companyDiv.style.opacity = 0;
+      companyInput.setAttribute("disabled", "disabled");
     }
   }
 </script>
