--- a/bizopt/BO/templates/yourTasks.html
+++ b/bizopt/BO/templates/yourTasks.html
@@ -7,6 +7,66 @@
   <h1>Ваши открытые задачи</h1>
 
   <button class="btn btn-primary" type="button" onclick="return location.href = 'addTask/' ">Создать задачу</button>
+
+  {% for task in tasks %}
+
+    <div class="accordion" id="accordionExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingOne">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+
+                  <div class="d-flex container-fluid flex-row">
+
+                      <img src="https://cdn130.picsart.com/356259745047201.jpg" alt="" width="60" height="48" class="d-inline-block align-text-top">
+
+                      <h1 style="margin-left: 5%">{{ task.name }}</h1>
+
+                  </div>
+
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+
+            <div class="progress">
+
+              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 100%">в работе</div>
+
+            </div>
+
+
+
+
+            <dl class="row" style="margin-top: 2%">
+              <dt class="col-sm-3">Описание</dt>
+              <dd class="col-sm-9">{{ task.description }}</dd>
+
+              <dt class="col-sm-3">Цена</dt>
+              <dd class="col-sm-9">
+                <div class="price">
+                    {{ task.price }} ₽
+                </div>
+
+                <span class="badge rounded-pill bg-success">Оплачено</span>
+
+                <span class="badge rounded-pill bg-danger">Не оплачено</span>
+              </dd>
+
+              <dt class="col-sm-3">Контакты продавца</dt>
+              <dd class="col-sm-9">This definition is short, so no extra paragraphs or anything.</dd>
+
+
+
+            </dl>
+
+
+
+
+          </div>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
 </div>
 
 
