--- a/bizopt/BO/templates/becomeCreatorTemplates/template11.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template11.html
@@ -1,40 +1,39 @@
 <div class="row d-flex justify-content-center align-items-center">
     <div class="col-md-8">
         <form id="regForm" method="POST">
+            {% csrf_token %}
             <h1 class="mb-5">Данные продавца</h1>
 
             <!-- start of bloc 1 -->
             <div class="tab" style="display: block;">
                 <label class="labels">ИНН</label>
-                <input type="text" class="form-control" name="" id="">
+                <input type="text" class="form-control" name="INN" id="">
                 <br>
                 <label class="labels">Краткое наиименование</label>
-                <input type="text" class="form-control" name="" id="">
+                <input type="text" class="form-control" name="short_name" id="">
                 <br>
-                <label class="labels">Полное наиименование</label>
-                <input type="text" class="form-control" name="" id="">
+                <label class="labels">Полное наименование</label>
+                <input type="text" class="form-control" name="full_name" id="">
                 <br>
                 <label class="labels">Форма регистрации</label>
                 <div class="input-group mb-3">
-                    <select class="form-select" id="inputGroupSelect02">
+                    <select name="reg_form" class="form-select" id="inputGroupSelect02">
                       <option value="1">ИП без НДС</option>
                       <option value="2">ИП с НДС</option>
                       <option value="3">ИП на НПД</option>
-                      <option value="4">Самозанятый</option>
+                      <option value="4" selected>Самозанятый</option>
                     </select>
                   </div>
                 <br>
                 <label class="labels">Расчетный счет</label>
-                <input type="text" class="form-control" name="" id="">
+                <input type="text" class="form-control" name="payment_account" id="">
                 <br>
             </div>
             <!-- end of bloc 1 -->
 
-            {% csrf_token %}
-
             <div class="row mt-3">
                 <div class="mt-5 text-center">
-                    <button class="btn btn-primary profile-button" type="submit">Сохранить</button>
+                    <button class="btn btn-primary profile-button" type="submit" name="partner">Сохранить</button>
                 </div>
             </div>
 
