--- a/bizopt/BO/templates/becomeCreatorTemplates/template12.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template12.html
@@ -25,7 +25,7 @@
 
             <div class="row mt-3">
                 <div class="mt-5 text-center">
-                    <button class="btn btn-primary profile-button" type="submit">Сохранить</button>
+                    <button class="btn btn-primary profile-button" type="submit" name="partner">Сохранить</button>
                 </div>
             </div>
 
