--- a/bizopt/BO/templates/becomeCreatorTemplates/template13.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template13.html
@@ -6,13 +6,13 @@
             <!-- start of bloc 1 -->
             <div class="tab" style="display: block;">
                 <label class="labels">Имя</label>
-                <input type="text" class="form-control" name="" id="">
+                <input type="text" class="form-control" name="my_first_name" id="">
                 <br>
                 <label class="labels">Фамилия</label>
-                <input type="text" class="form-control" name="" id="">
+                <input type="text" class="form-control" name="my_last_name" id="">
                 <br>
                 <label class="labels">Почта</label>
-                <input type="text" class="form-control" name="" id="">
+                <input type="text" class="form-control" name="my_email" id="">
                 <br>
             </div>
             <!-- end of bloc 1 -->
@@ -21,7 +21,7 @@
 
             <div class="row mt-3">
                 <div class="mt-5 text-center">
-                    <button class="btn btn-primary profile-button" type="submit">Сохранить</button>
+                    <button class="btn btn-primary profile-button" type="submit" name="partner">Сохранить</button>
                 </div>
             </div>
 
