--- a/bizopt/BO/templates/tasks.html
+++ b/bizopt/BO/templates/tasks.html
@@ -16,10 +16,11 @@
         body {
             background: #343a40bf;
         }
-        
+
         .labels {
             font-size: 11px;
         }
+
     </style>
 </head>
 <style>
@@ -30,6 +31,7 @@
         white-space: nowrap;
         text-overflow: ellipsis;
     }
+
 </style>
 
 
@@ -46,9 +48,10 @@
                     </div>
                     <div class="row">
                         {% for card in task_cards %}
-                            <!-- start of card template -->
+                        <!-- start of card template -->
+                        <!--
                             <div class="card m-2 p-0" style="width: 18rem;">
-                                <!-- src - фото(ссылка на фото)  alt - оставить дефолтным -->
+                                 src - фото(ссылка на фото)  alt - оставить дефолтным 
                                 <img src="https://upload.wikimedia.org/wikipedia/commons/9/9a/Gull_portrait_ca_usa.jpg" class="card-img-top" alt="task img">
                                 <div class="card-body">
                                     <h5 class="card-title">{{ card.name }}</h5>
@@ -67,6 +70,19 @@
                                     2 days ago
                                 </div>
                             </div>
+-->
+                        
+                            <div class="col-sm-6">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h5 class="card-title">{{ card.name }}</h5>
+                                        <p class="card-text">{{ card.description }}</p>
+                                        <a href="cardTask/{{ card.id }}" class="btn btn-primary">Go somewhere</a>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                        
                         {% endfor %}
                     </div>
                 </div>
@@ -75,5 +91,6 @@
     </div>
     <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js'></script>
 </body>
+
 </html>
 {% endblock %}
