--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -5,60 +5,61 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>BizOpt</title>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet'>
-    <script src="https://kit.fontawesome.com/185cad9bb6.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/813ad2426d.js" crossorigin="anonymous"></script>
+
 
     <style>
-        *:focus,*:active,*:hover{
+        *:focus,
+        *:active,
+        *:hover {
             outline: none !important;
             box-shadow: none !important;
-
         }
+        
         .form-control:focus {
             box-shadow: none;
             border-color: #BA68C8
         }
-
+        
         .profile-button {
             background: rgb(99, 39, 120);
             box-shadow: none;
             border: none
         }
-
+        
         .profile-button:hover {
             background: #682773
         }
-
+        
         .profile-button:focus {
             background: #682773;
             box-shadow: none
         }
-
+        
         .profile-button:active {
             background: #682773;
             box-shadow: none
         }
-
+        
         .back:hover {
             color: #682773;
             cursor: pointer
         }
-
+        
         .labels {
             font-size: 14px
         }
-
+        
         .add-experience:hover {
             background: #BA68C8;
             color: #fff;
             cursor: pointer;
             border: solid 1px #BA68C8
         }
-
+        
         input::-webkit-outer-spin-button,
         input::-webkit-inner-spin-button {
             /* display: none; <- Crashes Chrome on hover */
@@ -66,11 +67,12 @@
             margin: 0;
             /* <-- Apparently some margin are still there even though it's hidden */
         }
-
+        
         input[type=number] {
             -moz-appearance: textfield;
             /* Firefox */
         }
+        
         #regForm {
             background-color: #ffffff;
             margin: 0px auto;
@@ -165,7 +167,6 @@
             margin-top: 30px;
             margin-bottom: 30px
         }
-
     </style>
 </head>
 
@@ -224,7 +225,7 @@
         <!-- Page Content  -->
         <div id="content">
             <div id="MainWindowContainer" class="container rounded bg-white" w3-inslude-html="template.html">
-                
+
             </div>
         </div>
     </div>
@@ -232,31 +233,32 @@
 
 
     <script type="text/javascript">
-        $(function () {
+        $(function() {
+            var pageNumber = 6; //here is a number of page
             var xhr = new XMLHttpRequest()
-            xhr.open('GET', `becomeCreatorTemplates/${1}/`)
-            xhr.onload = function () {
+            xhr.open('GET', `becomeCreatorTemplates/${pageNumber}/`)
+            xhr.onload = function() {
 
                 $('#MainWindowContainer').html(xhr.response)
             }
             xhr.send()
         });
 
-        $('.Btn').on('click', {}, function (inBody) {
+        $('.Btn').on('click', {}, function(inBody) {
             var xhr = new XMLHttpRequest()
             var index = $(this).index() + 1
             xhr.open('GET', `becomeCreatorTemplates/${index}/`)
-            xhr.onload = function () {
+            xhr.onload = function() {
                 $('#MainWindowContainer').html(xhr.response)
             }
             xhr.send()
         });
 
-        $('.ExtBtn').on('click', {}, function (inBody) {
+        $('.ExtBtn').on('click', {}, function(inBody) {
             var xhr = new XMLHttpRequest()
             var index = $(this).index() + 11
             xhr.open('GET', `becomeCreatorTemplates/${index}/`)
-            xhr.onload = function () {
+            xhr.onload = function() {
                 $('#MainWindowContainer').html(xhr.response)
             }
             xhr.send()
@@ -264,8 +266,7 @@
     </script>
 
 
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
-        integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous">
     </script>
 
 
@@ -277,7 +278,7 @@
             line-height: 1.7em;
             color: #999;
         }
-
+        
         a,
         a:hover,
         a:focus {
@@ -285,7 +286,7 @@
             text-decoration: none;
             transition: all 0.3s;
         }
-
+        
         .navbar {
             padding: 15px 10px;
             background: #fff;
@@ -294,32 +295,30 @@
             margin-bottom: 40px;
             box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
         }
-
+        
         .navbar-btn {
             box-shadow: none;
             outline: none !important;
             border: none;
         }
-
+        
         .line {
             width: 100%;
             height: 1px;
             border-bottom: 1px dashed #ddd;
             margin: 40px 0;
         }
-
-
-
+        
         .text-sidebar {
             color: $text-sidebar;
         }
-
+        
         .wrapper {
             display: flex;
             width: 100%;
             align-items: stretch;
         }
-
+        
         #sidebar {
             min-width: 250px;
             max-width: 250px;
@@ -327,49 +326,49 @@
             color: #BFE3F7;
             transition: all 0.3s;
         }
-
+        
         #sidebar.active {
             margin-left: -250px;
         }
-
+        
         #sidebar .sidebar-header {
             padding: 20px;
             background: $lila-60
-                /*#6d7fcc*/
+            /*#6d7fcc*/
             ;
         }
-
+        
         #sidebar ul.components {
             padding: 20px 0;
             border-bottom: 1px solid $lila-line;
         }
-
+        
         #sidebar ul p {
             color: $text-sidebar;
             padding: 10px;
         }
-
+        
         #sidebar ul li a {
             padding: 10px;
             font-size: 1.1em;
             display: block;
         }
-
+        
         #sidebar ul li a:hover {
             color: $lila;
             background: $text-sidebar-hover;
         }
-
+        
         #sidebar ul li.active>a,
         a[aria-expanded="true"] {
             color: $text-sidebar;
             background: $lila-60;
         }
-
+        
         a[data-toggle="collapse"] {
             position: relative;
         }
-
+        
         .dropdown-toggle::after {
             display: block;
             position: absolute;
@@ -377,17 +376,17 @@
             right: 20px;
             transform: translateY(-50%);
         }
-
+        
         ul ul a {
             font-size: 0.9em !important;
             padding-left: 30px !important;
             background: $lila-60;
         }
-
+        
         ul.CTAs {
             padding: 20px;
         }
-
+        
         ul.CTAs a {
             text-align: center;
             font-size: 0.9em !important;
@@ -395,35 +394,31 @@
             border-radius: 5px;
             margin-bottom: 5px;
         }
-
+        
         a.download {
             background: $text-sidebar;
             color: $lila;
         }
-
+        
         a.article,
         a.article:hover {
             background: $lila-60 !important;
             color: $text-sidebar !important;
         }
-
-
+        
         #content {
             width: 100%;
             min-height: 100vh;
             transition: all 0.3s;
         }
-
-
+        
         @media (max-width: 768px) {
             #sidebar {
                 margin-left: -250px;
             }
-
             #sidebar.active {
                 margin-left: 0;
             }
-
             #sidebarCollapse span {
                 display: none;
             }
