fix button save

--- a/bizopt/BO/templates/becomeCreatorTemplates/template1.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template1.html
@@ -40,9 +40,9 @@
                     {% endfor %}
                 </tbody>
             </table>
-            <button type="button" class="btn btn-secondary button">Сохранить</button>
         </div>
     </div>
+    <button type="button" class="btn btn-secondary button button">Сохранить</button>
 
     <div class="d-flex flex-row" style="margin-top: 20px">
 
@@ -138,6 +138,13 @@
         height: 50px;
         width: 50px;
         background-color: aqua;
+    }
+
+    .button {
+        width: 71.5%;
+        margin-left: 13.5%;
+        margin-top: 1%;
+
     }
 
 </style>
