--- a/bizopt/BO/templates/yourTasks.html
+++ b/bizopt/BO/templates/yourTasks.html
@@ -90,6 +90,8 @@
                   <dd class="col-sm-9">This definition is short, so no extra paragraphs or anything.</dd>
 
                 </dl>
+                <a class="btn btn-primary" href="editTask/{{ card.id }}" role="button">Link</a>
+
             </div>
         </div>
 
