--- a/bizopt/BO/templates/editTask.html
+++ b/bizopt/BO/templates/editTask.html
@@ -1,87 +1,216 @@
 {% extends "base.html" %}
-
 {% block content %}
+<br>
 
-<div class="task-edit position">
-        <h1>Редактирование задачи</h1>
-    </div>
 
-<!--<div class="row mt-3 mb-3">-->
-<!--                    <div class="col-md-12">-->
-<!--                        <h1 class="labels">Расскажите о себе</h1>-->
-<!--                        &lt;!&ndash;            <textarea name="profile_description" class="form-control"></textarea>&ndash;&gt;-->
-<!--                        {{ form9.description }}-->
-<!--                    </div>-->
-<!--                </div>-->
-
-    <div>
-        <div class="all-position">
-            <div class="input-group mb-3 name-task">
-                <span class="input-group-text">Название задачи</span>
-                <input type="text" class="form-control position-name" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" value="text">
+<div class="container">
+    <div class="title">editTask</div>
+    <div class="content">
+        <form method="post">
+            {% csrf_token %}
+            <div class="user-details">
+                <div class="col-md">
+                    <div class="form-floating">
+                        {{ form.task_name }}
+                        <label for="floatingInputGrid">Название задачи</label>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="form-floating">
+                        {{ form.select }}
+                    </div>
+                </div>
             </div>
-            <div class="price-and-date">
-                <div class="input-group mb-3 price-and-date-width">
+
+            <div class="form-floating">
+                {{ form.description }}
+                <label for="floatingTextarea2">Описание</label>
+            </div>
+
+            <div class="input-box">
+                <br>
+                <div class="input-group mb-3">
                     <span class="input-group-text">Цена</span>
-                    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" value="text">
-                </div>
-                <div class="input-group mb-3 price-and-date-width date">
-                    <span class="input-group-text">Дата</span>
-                    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" value="text">
+                    {{ form.price }}
+                    <span class="input-group-text">руб</span>
                 </div>
             </div>
 
-            <div class="input-group mb-3 name-task">
-                <label class="input-group-text" for="inputGroupSelect01">Профиль</label>
-                <select class="form-select" id="inputGroupSelect01">
-                    <option selected>text</option>
-                    <option value="text">1</option>
-                    <option value="text">2</option>
-                    <option value="text">3</option>
-                </select>
+
+            <div class="form-group">
+                {{ form.date }}
             </div>
-            <div class="input-group name-task">
-                <span class="input-group-text" >Описание задачи</span>
-                <textarea class="form-control" aria-label="With textarea"></textarea>
+
+            <div class="d-grid gap-2 d-md-block">
+                <div class="button">
+                    <input type="button" value="Назад">
+                </div>
+                <div class="button">
+                    <input type="submit" value="Сохранить">
+                </div>
             </div>
-            <button type="button" class="btn btn-secondary button">Сохранить</button>
-        </div>
+        </form>
     </div>
+</div>
+
 
 <style>
-    .position {
-        text-align: center;
-        margin-bottom: 50px;
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+    .container {
+        max-width: 700px;
+        width: 100%;
+        background-color: #fff;
+        padding: 25px 30px;
+        border-radius: 5px;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+    }
+
+    .container .title {
+        font-size: 25px;
+        font-weight: 500;
         position: relative;
     }
-    .all-position {
-        margin-left: 520px;
-        margin-right: 400px;
+
+    .container .title::before {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        height: 3px;
+        width: 30px;
+        border-radius: 5px;
+        background: linear-gradient(135deg, #71b7e6, #9b59b6);
     }
 
-    .name-task {
-        width: 500px;
-        padding-bottom: 70px;
-    }
-    .price-and-date {
-        display: inline-block;
-        position: relative;
-    }
-    .price-and-date-width {
-        width: 230px;
-    }
-    .date {
-        left: 270px;
-        bottom: 55px;
+    .content form .user-details {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin: 20px 0 12px 0;
     }
 
-    .task-about {
-        left: 600px;
-        bottom: 270px;
-        height: 300px;
+    form .user-details .input-box {
+        margin-bottom: 15px;
+        width: calc(100% / 2 - 20px);
     }
 
+    form .input-box span.details {
+        display: block;
+        font-weight: 500;
+        margin-bottom: 5px;
+    }
 
+    .user-details .input-box input {
+        height: 45px;
+        width: 100%;
+        outline: none;
+        font-size: 16px;
+        border-radius: 5px;
+        padding-left: 15px;
+        border: 1px solid #ccc;
+        border-bottom-width: 2px;
+        transition: all 0.3s ease;
+    }
+
+    .user-details .input-box input:focus,
+    .user-details .input-box input:valid {
+        border-color: #9b59b6;
+    }
+
+    form .gender-details .gender-title {
+        font-size: 20px;
+        font-weight: 500;
+    }
+
+    form .category {
+        display: flex;
+        width: 80%;
+        margin: 14px 0;
+        justify-content: space-between;
+    }
+
+    form .category label {
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+    }
+
+    form .category label .dot {
+        height: 18px;
+        width: 18px;
+        border-radius: 50%;
+        margin-right: 10px;
+        background: #d9d9d9;
+        border: 5px solid transparent;
+        transition: all 0.3s ease;
+    }
+
+    #dot-1:checked~.category label .one,
+    #dot-2:checked~.category label .two,
+    #dot-3:checked~.category label .three {
+        background: #9b59b6;
+        border-color: #d9d9d9;
+    }
+
+    form input[type="radio"] {
+        display: none;
+    }
+
+    form .button {
+        height: 45px;
+        margin: 35px 0
+    }
+
+    form .button input {
+        height: 100%;
+        width: 100%;
+        border-radius: 5px;
+        border: none;
+        color: #fff;
+        font-size: 18px;
+        font-weight: 500;
+        letter-spacing: 1px;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        background: linear-gradient(135deg, #71b7e6, #9b59b6);
+    }
+
+    form .button input:hover {
+        /* transform: scale(0.99); */
+        background: linear-gradient(-135deg, #71b7e6, #9b59b6);
+    }
+
+    @media(max-width: 584px) {
+        .container {
+            max-width: 100%;
+        }
+        form .user-details .input-box {
+            margin-bottom: 15px;
+            width: 100%;
+        }
+        form .category {
+            width: 100%;
+        }
+        .content form .user-details {
+            max-height: 300px;
+            overflow-y: scroll;
+        }
+        .user-details::-webkit-scrollbar {
+            width: 5px;
+        }
+    }
+
+    @media(max-width: 459px) {
+        .container .content .category {
+            flex-direction: column;
+        }
+    }
 </style>
+
+
+<script>
+</script>
+
+
 
 {% endblock %}
