--- a/bizopt/BO/templates/editTask.html
+++ b/bizopt/BO/templates/editTask.html
@@ -42,8 +42,8 @@
             </div>
 
             <div class="d-grid gap-2 d-md-block">
-                <div class="button">
-                    <input type="button" value="Назад">
+                <div class="buttonBack">
+                    <a href="/yourTasks/">Назад</a>
                 </div>
                 <div class="button">
                     <input type="submit" value="Сохранить">
@@ -63,6 +63,29 @@
         padding: 25px 30px;
         border-radius: 5px;
         box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+    }
+    form .buttonBack a{
+        text-align: center;
+        box-sizing: border-box;
+        height: 100%;
+        width: 100%;
+        margin: auto;
+        padding: 10px 292px 10px;
+        text-decoration: none;
+        border-radius: 5px;
+        border: none;
+        color: #fff;
+        font-size: 18px;
+        font-weight: 500;
+        letter-spacing: 1px;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        background: linear-gradient(135deg, #71b7e6, #9b59b6);
+
+    }
+    form .buttonBack {
+        margin-top: 5%;
+
     }
 
     .container .title {
@@ -158,7 +181,8 @@
 
     form .button {
         height: 45px;
-        margin: 35px 0
+        margin: 35px 0;
+
     }
 
     form .button input {
@@ -174,6 +198,7 @@
         transition: all 0.3s ease;
         background: linear-gradient(135deg, #71b7e6, #9b59b6);
     }
+
 
     form .button input:hover {
         /* transform: scale(0.99); */
