add delete button

--- a/bizopt/BO/templates/becomeCreatorTemplates/template3.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template3.html
@@ -23,7 +23,8 @@
                     <th class="th-lg"><a href="">Название товара</a></th>
                     <th class="th-lg"><a href="">Бренд</a></th>
                     <th class="th-lg"><a href="">Цена</a></th>
-                    <th class="th-lg"><a href="">Опубликовать</a></th>
+                    <th class="th-lg"><a href="">Опубликовано</a></th>
+                    <th class="th-lg"><a href="">Удалить</a></th>
                 </tr>
             </thead>
 
@@ -38,6 +39,7 @@
                     <td>text</td>
                     <td>{{ product.cost }}</td>
                     <td>text</td>
+                    <td><button type="button" class="btn btn-outline-secondary">X</button></td>
                 </tr>
 
             {% endfor %}
